@@ -6,6 +6,7 @@ require_relative "simplify/inline_formulae"
 require_relative "simplify/replace_formulae_with_calculated_values"
 require_relative "simplify/replace_indirects_with_references"
 require_relative "simplify/replace_offsets_with_references"
+require_relative "simplify/replace_column_with_column_number"
 require_relative "simplify/simplify_arithmetic"
 require_relative "simplify/identify_dependencies"
 require_relative "simplify/remove_cells"
