@@ -1,5 +1,6 @@
 # Head
 
+- Now attempts to simplify COLUMN() functions out of the spreadsheet at compile time (the function is not supported at runtime)
 - Fix bug in the treatment of array results when simplifying INDEX functions
 - Fixed a bug in replacing some table references with their values
 - Now attempts to simplify OFFSET() functions out of the spreadsheet at compile time (the function is NOT supported at runtime)
